--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -90,7 +90,12 @@ services:
         condition: service_healthy
     command: >
       bash -c "
-      schematool -dbType postgres -initSchema &&
+      echo 'Waiting for PostgreSQL...';
+      until pg_isready -h hive-metastore-postgresql -p 5432 -U hive; do
+          sleep 2;
+      done;
+      echo 'PostgreSQL is ready, initializing schema';
+      schematool -dbType postgres -initSchema;
       /opt/hive/bin/hive --service metastore
       "
     ports:
