--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -91,17 +91,19 @@ services:
     command: >
       bash -c "
       echo 'Waiting for PostgreSQL...';
-      until pg_isready -h hive-metastore-postgresql -p 5432 -U hive; do
+      until pg_isready -h hive-metastore-postgresql -p 5432 -U $HIVE_METASTORE_USER; do
           sleep 2;
       done;
       echo 'PostgreSQL is ready, initializing schema';
       schematool -dbType postgres -initSchema;
+      echo 'Starting Hive Metastore';
       /opt/hive/bin/hive --service metastore
       "
     ports:
       - "9083:9083"
     networks:
       - hadoop-net
+
 
   # -----------------------------
   # HiveServer2
