--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -94,9 +94,9 @@ services:
       until pg_isready -h hive-metastore-postgresql -p 5432 -U $HIVE_METASTORE_USER; do
           sleep 2;
       done;
-      echo 'PostgreSQL is ready, initializing schema';
+      echo 'PostgreSQL ready. Initializing schema...';
       schematool -dbType postgres -initSchema;
-      echo 'Starting Hive Metastore';
+      echo 'Starting Hive Metastore...';
       /opt/hive/bin/hive --service metastore
       "
     ports:
