--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -12,7 +12,7 @@ HIVE_METASTORE_DB=metastore
 HIVE_METASTORE_HOST=hive-metastore-postgresql
 HIVE_METASTORE_PORT=5432
 HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
+HIVE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
 
-
-# Spark settings
+# Spark settings (optional)
 SPARK_MASTER=spark://spark-master:7077
