--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -67,6 +67,7 @@ services:
       POSTGRES_DB: metastore
     volumes:
       - metastore-db:/var/lib/postgresql/data
+      - ./init-metastore.sql:/docker-entrypoint-initdb.d/init-metastore.sql
     ports:
       - "5432:5432"
     networks:
