--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -73,7 +73,7 @@ services:
     networks:
       - hadoop-net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U hive"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 5s
       retries: 20
       timeout: 5s
