--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -5,20 +5,19 @@ services:
   # HDFS - NameNode
   # -----------------------------
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.1-java8
     container_name: namenode
     restart: always
     env_file:
       - ./hadoop.env
     environment:
       - CLUSTER_NAME=hadoop-cluster
-      - HDFS_NAMENODE_RPC_ADDRESS=namenode:9000
+      - HDFS_NAMENODE_RPC_ADDRESS=namenode:8020
     volumes:
       - ./data/namenode:/hadoop/dfs/name
       - ./hadoop_dir:/opt/hadoop-3.2.1/etc/hadoop
     ports:
       - "9870:9870"
-      - "9000:9000"
       - "8020:8020"
     networks:
       - hadoop-net
@@ -32,14 +31,14 @@ services:
   # HDFS - DataNode
   # -----------------------------
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.1-java8
     container_name: datanode
     restart: always
     env_file:
       - ./hadoop.env
     environment:
       - SERVICE_PRECONDITION=namenode:9870
-      - HDFS_NAMENODE_RPC_ADDRESS=namenode:9000
+      - HDFS_NAMENODE_RPC_ADDRESS=namenode:8020
     volumes:
       - ./data/datanode:/hadoop/dfs/data
       - ./hadoop_dir:/opt/hadoop-3.2.1/etc/hadoop
@@ -82,7 +81,7 @@ services:
   # Hive Metastore
   # -----------------------------
   hive-metastore-init:
-    image: bde2020/hive:2.3.9-hadoop3.2.1
+    image: bde2020/hive:2.1.0-postgresql-metastore
     container_name: hive-metastore-init
     env_file:
       - ./hadoop.env
@@ -98,7 +97,7 @@ services:
   
 
   hive-metastore:
-    image: bde2020/hive:2.3.9-hadoop3.2.1
+    image: bde2020/hive:2.1.0-postgresql-metastore
     container_name: hive-metastore
     env_file:
       - ./hadoop.env
@@ -120,7 +119,7 @@ services:
   # HiveServer2
   # -----------------------------
   hive-server:
-    image: bde2020/hive:2.3.9-hadoop3.2.1
+    image: bde2020/hive:2.1.0-postgresql-metastore
     container_name: hive-server
     platform: linux/amd64
     env_file:
