--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -15,9 +15,9 @@ services:
       - HDFS_NAMENODE_RPC_ADDRESS=namenode:8020
     volumes:
       - ./data_new/namenode:/hadoop/dfs/name
-      - ./hadoop_dir:/opt/hadoop-3.2.1/etc/hadoop
+      - ./hadoop_dir:/opt/hadoop-2.7.4/etc/hadoop        # <-- FIXED PATH
     ports:
-      - "9870:9870"
+      - "50070:50070"                                     # <-- FIXED PORT
       - "8020:8020"
     networks:
       - hadoop-net
@@ -31,7 +31,7 @@ services:
   # HDFS - DataNode
   # -----------------------------
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8  # <-- FIXED IMAGE
     container_name: datanode
     restart: always
     env_file:
@@ -41,17 +41,12 @@ services:
       - HDFS_NAMENODE_RPC_ADDRESS=namenode:8020
     volumes:
       - ./data_new/datanode:/hadoop/dfs/data
-      - ./hadoop_dir:/opt/hadoop-3.2.1/etc/hadoop
+      - ./hadoop_dir:/opt/hadoop-2.7.4/etc/hadoop        # <-- FIXED PATH
     depends_on:
       namenode:
         condition: service_healthy
     networks:
       - hadoop-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9864"]
-      interval: 10s
-      timeout: 5s
-      retries: 20
 
   # -----------------------------
   # PostgreSQL for Hive Metastore
