--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -1,30 +1,19 @@
-# HDFS settings
-CLUSTER_NAME=test
-CORE_CONF_fs_defaultFS=hdfs://namenode:8020
-HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
-HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
-HDFS_CONF_dfs_replication=1
+# -----------------------------
+# HDFS Configuration
+# These are read by the namenode and datanode
+# -----------------------------
+CORE_CONF_fs.defaultFS=hdfs://namenode:8020
+HDFS_CONF_dfs.namenode.name.dir=file:///hadoop/dfs/name
+HDFS_CONF_dfs.datanode.data.dir=file:///hadoop/dfs/data
+HDFS_CONF_dfs.replication=1
 
-# Hive settings
-#HIVE_METASTORE_USER=hive
-#HIVE_METASTORE_PASSWORD=hive
-#HIVE_METASTORE_DB=metastore
-#HIVE_METASTORE_HOST=hive-metastore-postgresql
-#HIVE_METASTORE_PORT=5432
-#HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-#HIVE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
-
-# Metastore JDBC Connection
-HIVE_CORE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-HIVE_CORE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
-HIVE_CORE_CONF_javax_jdo_option_ConnectionUserName=hive
-HIVE_CORE_CONF_javax_jdo_option_ConnectionPassword=hive
-
-# Metastore URI for clients (like hive-server) to connect to
-HIVE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
-
-# Location for Hive data in HDFS
-HIVE_CORE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
-
-# Spark settings (optional)
-SPARK_MASTER=spark://spark-master:7077
+# -----------------------------
+# Hive Configuration
+# These are read by the hive-metastore-init, hive-metastore, and hive-server
+# -----------------------------
+HIVE_SITE_CONF_javax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
+HIVE_SITE_CONF_javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
+HIVE_SITE_CONF_javax.jdo.option.ConnectionUserName=hive
+HIVE_SITE_CONF_javax.jdo.option.ConnectionPassword=hive
+HIVE_SITE_CONF_hive.metastore.uris=thrift://hive-metastore:9083
+HIVE_SITE_CONF_hive.metastore.warehouse.dir=/user/hive/warehouse
