--- a/lab5/hadoop-hive-dockercompose/hadoop.env
+++ b/lab5/hadoop-hive-dockercompose/hadoop.env
@@ -11,9 +11,9 @@ HDFS_CONF_dfs.replication=1
 # Hive Configuration
 # These are read by the hive-metastore-init, hive-metastore, and hive-server
 # -----------------------------
-HIVE_SITE_CONF_javax.jdo.option.ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
-HIVE_SITE_CONF_javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
-HIVE_SITE_CONF_javax.jdo.option.ConnectionUserName=hive
-HIVE_SITE_CONF_javax.jdo.option.ConnectionPassword=hive
-HIVE_SITE_CONF_hive.metastore.uris=thrift://hive-metastore:9083
-HIVE_SITE_CONF_hive.metastore.warehouse.dir=/user/hive/warehouse
+HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
+HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
+HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
+HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
+HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
