--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -71,6 +71,7 @@ services:
       interval: 5s
       retries: 20
       timeout: 5s
+    command: ["postgres", "-c", "password_encryption=md5"]
 
   # -----------------------------
   # Hive Metastore
