--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -96,6 +96,9 @@ services:
     container_name: hive-metastore
     env_file:
       - ./hadoop.env
+    volumes:
+      # Mount the wait script into the container's path
+      - ./wait-for-it.sh:/usr/local/bin/wait-for-it.sh # <-- ADDED THIS
     depends_on:
       hive-metastore-init:
         condition: service_completed_successfully
