--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -96,24 +96,17 @@ services:
     container_name: hive-metastore
     env_file:
       - ./hadoop.env
-#    volumes:
-#      # Mount the wait script into the container's path
-#      - ./wait-for-it.sh:/usr/local/bin/wait-for-it.sh # <-- ADDED THIS
     depends_on:
       hive-metastore-init:
         condition: service_completed_successfully
       namenode:
         condition: service_healthy
-    environment:
-      - HADOOP_USER_NAME=root
+    # We remove the custom 'environment' section to rely on the clean env_file settings
     command: >
       bash -c "
-      echo 'Waiting for HDFS to be ready...';
-      until hdfs dfs -ls /; do
-        echo 'HDFS not yet ready... sleeping';
-        sleep 5;
-      done;
-      echo 'HDFS is ready. Starting Hive Metastore...';
+      echo 'Waiting 30 seconds for HDFS to stabilize...';
+      sleep 30;
+      echo 'Starting Hive Metastore...';
       exec /opt/hive/bin/hive --service metastore
       "
     ports:
