--- a/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
+++ b/lab5/hadoop-hive-dockercompose/docker-compose-new.yaml
@@ -77,7 +77,7 @@ services:
   # Hive Metastore
   # -----------------------------
   hive-metastore-init:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-hadoop2.8-postgresql-metastore
     container_name: hive-metastore-init
     env_file:
       - ./hadoop.env
@@ -92,7 +92,7 @@ services:
   
 
   hive-metastore:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-hadoop2.8-postgresql-metastore
     container_name: hive-metastore
     env_file:
       - ./hadoop.env
@@ -119,7 +119,7 @@ services:
   # HiveServer2
   # -----------------------------
   hive-server:
-    image: bde2020/hive:2.1.0-postgresql-metastore
+    image: bde2020/hive:2.3.2-hadoop2.8-postgresql-metastore
     container_name: hive-server
     platform: linux/amd64
     env_file:
